@@ -1,6 +1,8 @@
 Revision history for XML-Grammar-Fiction.
 
     * <blockquote> now supports xml:id and xml:lang.
+    * Fiction-Text: a plus sign ( + ) at the starting line of the paragraph
+    now indicates that the following tag is a style tag.
 
 0.7.0       Wed May 25 12:47:13 IDT 2011
     * Add support for the lang="..." attribute of <body> in Fiction-Text which
